<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">RUautonomous Drone Camera</string>
    <string name="ip">GCS IP</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="gcstitle">GCS Connect</string>
    <string name="qxtitle">QX Configure</string>
    <string name="telemtitle">MAV Configure</string>
    <string name="gcsconnect">GCS connect</string>
    <string name="altlabel">Altitude: </string>
    <string name="latlabel">Latitude: </string>
    <string name="lonlabel">Longitude: </string>
    <string name="rolllabel">Roll: </string>
    <string name="pitchlabel">Pitch: </string>
    <string name="azimuthlabel">Azimuth: </string>
    <string name="mavconnect">MAV connect</string>
    <string name="interval">Interval:</string>
    <string name="search">Search</string>
    <string name="startcapture">Start Capture</string>
    <string name="stopcapture">Stop Capture</string>
    <string name="mavdisconnect">MAV Disconnect</string>
    <string name="zero">0</string>
    <string name="gcsdisconnect">GCS Disconnect</string>
    <string name="etheron">Ethernet On</string>
    <string name="formatlabel">Format:</string>
    <string name="colon">:</string>
    <string name="dot">.</string>
    <string name="hint3">xxx</string>
    <string name="hint4">xxxx</string>
    <string name="beepon">Beep On</string>
    <string name="beepoff">Beep Off</string>

    <string-array name="drone_connection_types">
        <item>USB</item>
        <item>UDP</item>
    </string-array>

    <string-array name="image_format_type">
        <item>2M</item>
        <item>Original</item>
    </string-array>

</resources>
