<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".DroneActivity"
    android:weightSum="3"
   android:background="@color/red"
    >




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/first">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcstitle"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/gcstitle"/>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/gcstitle"
                    >


                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstip"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/hint3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstcolon"
                        android:text="@string/dot"
                        android:textSize="35sp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondip"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/hint3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondcolon"
                        android:text="@string/dot"
                        android:textSize="35sp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/thirdip"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/hint3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/thirdcolon"
                        android:text="@string/dot"
                        android:textSize="35sp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fourthip"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/hint3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/colon"
                        android:text="@string/colon"
                        android:textSize="20sp"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4"
                        android:hint="@string/hint4"
                        android:id="@+id/port"/>



                </LinearLayout>
            </RelativeLayout>







                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/username"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/username"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:hint="@string/password" />


                <Button
                    android:layout_marginRight="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcsconnect"
                    android:id="@+id/remote"

                  />




    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/second"
        android:layout_weight="1"

       >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telemtitle"
            android:textStyle="bold"

            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"

            android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerlayout"
                    android:orientation="vertical">
                    <Spinner
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/connectionType"
                        android:backgroundTint="@color/gray"
                        >

                    </Spinner>
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/data"
                    android:orientation="vertical"

                   >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/altlabel"
                            android:textStyle="italic"
                            android:id="@+id/altlabel"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/alt"
                            android:layout_toRightOf="@id/altlabel"
                            android:text="@string/zero"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/latlabel"
                            android:text="@string/latlabel"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/lat"
                            android:layout_toRightOf="@+id/latlabel"
                            android:text="@string/zero"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/lonlabel"
                                android:text="@string/lonlabel"
                                android:textStyle="italic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/lon"
                                android:layout_toRightOf="@+id/lonlabel"
                                android:text="@string/zero"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rolllabel"
                            android:text="@string/rolllabel"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/roll"
                            android:layout_toRightOf="@+id/rolllabel"
                            android:text="@string/zero"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/pitchlabel"
                            android:text="@string/pitchlabel"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/pitch"
                            android:layout_toRightOf="@+id/pitchlabel"
                            android:text="@string/zero"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/azimuthlabel"
                            android:text="@string/azimuthlabel"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/azimuth"
                            android:layout_toRightOf="@+id/azimuthlabel"
                            android:text="@string/zero"/>
                    </RelativeLayout>


                </LinearLayout>

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mavconnect"
            android:id="@+id/droneconnect" />



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textStyle="bold"
            android:text="@string/qxtitle"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/firstlinear">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"

                android:id="@+id/labelforinterval"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
            <HorizontalScrollView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:fillViewport="true"

                android:background="@drawable/scrollviewborder"
                android:backgroundTint="@color/gray"
                android:id="@+id/intervals"


                >
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TableRow
                        android:id="@+id/numericintervals"
                        >

                    </TableRow>

                </TableLayout>
            </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/firstlinear">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/formatlabel"
                            android:id="@+id/formatlabeltext"
                            android:textSize="20sp"
                            android:paddingLeft="10dp"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageformat"
                            android:backgroundTint="@color/gray"
                            >

                        </Spinner>
            </LinearLayout>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_searchqx"
                android:text="@string/search"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" />



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_triggerqx"
                    android:text="@string/startcapture"
                    android:layout_toRightOf="@+id/button_searchqx"/>


        </RelativeLayout>

    </LinearLayout>

    </LinearLayout>



</LinearLayout>
